WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241537
Design an intentional way to invalidate platform font caches
https://bugs.webkit.org/show_bug.cgi?id=241537
Summary
Design an intentional way to invalidate platform font caches
Myles C. Maxfield
Reported
2022-06-11 23:44:12 PDT
Design an intentional way to invalidate platform font caches
Attachments
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-06-12 00:03:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1464
Radar WebKit Bug Importer
Comment 2
2022-06-18 23:45:18 PDT
<
rdar://problem/95475502
>
EWS
Comment 3
2022-06-24 18:05:45 PDT
Committed
251845@main
(78afcc43874c): <
https://commits.webkit.org/251845@main
> Reviewed commits have been landed. Closing PR #1464 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug